# link19_analytics

./: .gitignore  README.md  pyproject.toml
data/llm_reviews/: linkedin_action_plan.md  linkedin_restructure_analysis.md
data/output/: linkedin_report.md
data/processed/: demographics.csv  discovery.csv  engagement.csv  followers.csv  top_posts.csv
data/raw/: AggregateAnalytics_Gerardo Toboso_2025-07-01_2026-06-30.xlsx
linkedin_structure/: about.md  experience.md  header.md
src/: analyze.py  extract.py  pipeline.py  report.py  transform.py
tests/integration/: test_extract_and_transform.py
tests/unit/analyze/: test_analyze.py
tests/unit/extract/: test_extract.py
tests/unit/transform/: test_transform.py
