[project]
name = "link19-analytics"
version = "0.1.0"
description = "Proyecto para manejar mis analiticas de linkedin."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that read the real xlsx from data/raw (slow)",
]
